# nd

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .typos.toml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  duties.py  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
.github/: labeler.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: automated-tests.yml  commit-linter.yml  create-release.yml  devcontainer-checker.yml  labeler.yml  pr-linter.yml  pypi-release.yml  python-code-checker.yml  test.yml  upload-codecov.yml
src/nd/: __init__.py  __version__.py  alloc_target.py  allocio.py  cli.py  constants.py  default_config.toml  jobfiles.py  jobspec.py  selection.py  volumefiles.py
src/nd/_commands/: __init__.py  clean_command.py  exec_command.py  list_jobs.py  list_jobs_command.py  logs_command.py  plan.py  plan_command.py  run_command.py  status_command.py  stop_command.py
src/nd/_commands/utils/: __init__.py  alerts.py  call_nomad_api.py  cluster_nodes.py  cluster_placements.py  job_files.py  utilities.py
src/nd/_utils/: __init__.py  call_nomad_api.py  cluster_nodes.py  cluster_placements.py  job_files.py  utilities.py
src/nd/binary/: __init__.py  allocio.py  env.py  jobspec.py  runner.py
src/nd/commands/: __init__.py  _common.py  _orchestration.py  clean.py  exec.py  list.py  logs.py  plan.py  run.py  status.py  stop.py  update.py
src/nd/commands/status/: __init__.py  command.py  render.py  report.py
src/nd/commands/volume/: __init__.py  command.py  render.py  report.py
src/nd/config/: __init__.py  config.py  default_config.toml
src/nd/models/: enums.py  job.py  job_files.py  node.py  nomad_api.py
src/nd/nomad/: __init__.py  client.py  config.py  errors.py  transport.py
src/nd/nomad/models/: __init__.py  agent.py  allocation.py  common.py  deployment.py  evaluation.py  job.py  node.py  volume.py
src/nd/nomad/resources/: __init__.py  agent.py  allocations.py  base.py  deployments.py  evaluations.py  jobs.py  nodes.py  status.py  system.py  volumes.py
src/nd/targets/: __init__.py  alloc_target.py  selection.py
src/nd/ui/: __init__.py  alloc_rows.py  duration.py  links.py  live_panel.py  panels.py  prompts.py  styles.py
src/nd/utils/: __init__.py  alerts.py  helpers.py  logging.py  questions.py
tests/: __init__.py  alerts_test.py  cli_test.py  config_test.py  conftest.py  helpers.py  helpers_test.py  job_files_test.py  test_alerts.py  test_clean_command.py  test_cli.py  test_cluster_nodes.py  test_cluster_placements.py  test_exec_command.py  test_job_files.py  test_list_jobs_command.py  test_logs_command.py  test_nomad_api.py  test_plan.py  test_plan_command.py  test_run_command.py  test_status_command.py  test_stop_command.py  test_utilities.py
tests/fixtures/: jobfile_invalid.hcl  jobfile_valid.hcl
tests/resources/: config.toml  config_all.toml  config_invalid.toml  config_no_files.toml  config_no_jobs.toml  config_valid.toml
tests/resources/job_files/: radarr.hcl  sonarr.txt  template_localfs.hcl
tests/resources/job_files/invalid/: template-groups.hcl
tests/resources/job_files/valid/: lidarr.hcl  sonarr.hcl  template-simple.hcl  whoogle.hcl
tests/unit/: __init__.py  test_alloc_target.py  test_allocio.py  test_cli.py  test_env.py  test_jobfiles.py  test_jobspec.py  test_runner.py  test_selection.py  test_volumefiles.py
tests/unit/commands/: __init__.py  test_clean.py  test_exec.py  test_list.py  test_logs.py  test_orchestration.py  test_plan.py  test_run.py  test_status.py  test_stop.py  test_update.py
tests/unit/commands/volume/: __init__.py  test_command.py  test_render.py  test_report.py
tests/unit/nomad/: __init__.py  test_client.py  test_config.py  test_errors.py  test_public_api.py  test_transport.py  test_transport_pagination.py
tests/unit/nomad/models/: __init__.py  test_agent.py  test_allocation.py  test_deployment.py  test_evaluation.py  test_job.py  test_node.py
tests/unit/nomad/resources/: __init__.py  test_agent.py  test_allocations.py  test_base.py  test_deployments.py  test_evaluations.py  test_jobs.py  test_nodes.py  test_status.py  test_system.py  test_volumes.py
tests/unit/ui/: test_alloc_rows.py  test_duration.py  test_links.py  test_live_panel.py  test_panels.py  test_prompts.py  test_styles.py
