[project]
    authors = [{ name = "Nathaniel Landau", email = "github@natelandau.com" }]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: System Administrators",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: System :: Systems Administration",
        "Topic :: Utilities",
        "Typing :: Typed",
    ]
    dependencies = [
        "httpx2>=2.4.0,<3.0.0",
        "lark>=1.3.1,<2.0.0",
        "msgspec>=0.21.1",
        "nclutils>=3.4.1,<4.0.0",
        "python-hcl2>=8.1.2,<9.0.0",
        "rich>=15.0.0",
        "typer>=0.26.7",
    ]
    description = "A friendly command-line tool for managing a HashiCorp Nomad homelab cluster."
    keywords = ["cli", "devops", "hashicorp", "homelab", "nomad", "orchestration"]
    license = "MIT"
    license-files = ["LICENSE"]
    name = "nomadctl"
    readme = "README.md"
    requires-python = ">=3.13, <3.15"
    version = "0.1.0"

    [project.urls]
        Homepage   = "https://github.com/natelandau/nd"
        Issues     = "https://github.com/natelandau/nd/issues"
        Repository = "https://github.com/natelandau/nd"

    [project.scripts]
        nd = "nd:main"

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.11.23,<0.12.0"]

    # Distribution is published as "nomadctl"; the importable module and `nd`
    # CLI command stay "nd", so pin the packaged module name explicitly.
    [tool.uv.build-backend]
        module-name = "nd"

[dependency-groups]
    dev = [
        "commitizen>=4.16.4",
        "coverage>=7.14.3",
        "duty>=1.9.0",
        "prek>=0.4.5",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=7.1.0",
        "pytest-devtools>=1.2.0",
        "pytest-httpx2>=1.0.0",
        "pytest-mock>=3.15.1",
        "pytest-repeat>=0.9.4",
        "pytest-sugar>=1.1.1",
        "pytest>=9.1.1",
        "respx>=0.23.1",
        "ruff>=0.15.18",
        "ty>=0.0.52",
        "typos>=1.47.2",
        "yamllint>=1.38.0",
    ]

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version_files              = ["src/nd/__init__.py:__version__"]
    version_provider           = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'if TYPE_CHECKING',
        'pragma: no cover',
    ]
    fail_under = 10
    show_missing = true
    skip_covered = true
    skip_empty = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = ".cache/coverage"
    omit         = ["tests/*"]
    source       = ["src"]

[tool.coverage.xml]
    output = ".cache/coverage.xml"

[tool.pytest.ini_options]

    addopts        = "--color=yes --doctest-modules --strict-config --strict-markers"
    cache_dir      = ".cache/pytest"
    columns        = 120
    filterwarnings = ['error', 'ignore:.*Pydantic.*:UserWarning', 'ignore::DeprecationWarning:']
    markers        = ["serial"]
    set_columns    = true
    testpaths      = ["tests"]
    xfail_strict   = true

[tool.ruff] # https://github.com/charliermarsh/ruff

    exclude        = [".cache", ".git", ".venv", "build", "dist", "reference"]
    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py313"
    [tool.ruff.lint]
        ignore = [
            "ANN002",  # Missing type annotation for `*args`
            "ANN003",  # Missing type annotation for `**kwargs`
            "ANN204",  # missing return type annotation for special method `__init__`
            "COM812",  # Trailing comma missing"
            "CPY001",  # Missing copyright notice at top of file
            "D107",    # undocumented-public-init
            "E501",    # line-too-long
            "FIX002",  # Line contains TODO, consider resolving the issue
            "PLC0415", # Imports should be at top of file
            "S311",    # suspicious-non-cryptographic-random-usage
            "TD001",   # invalid-todo-tag
            "TD002",   # Missing author in TODO
            "TD003",   # Missing issue link on the line following this TODO
        ]
        per-file-ignores = { "tests/**/*.py" = [
            "A002",
            "A003",
            "ANN001",  # Missing type annotation for function argument `cls`
            "ANN002",  # Missing type annotation for `*args`
            "ANN003",  # Missing type annotation for `**kwargs`
            "ANN201",  # Missing return type annotation
            "ARG001",  # Unused function argument
            "ARG002",  # Unused method argument
            "ARG005",  # Unused lambda argument
            "D102",
            "ERA001",  # Commented out code
            "F403",
            "F405",    # May be undefined from type imports
            "FBT001",  # Boolean-typed positional argument in function definition
            "PGH003",  # Use specific rule codes when ignoring type issues
            "PLC0415", # Imports should be at top of file
            "PLR0913",
            "PLR2004",
            "PLW0108", # Lambda may be unnecessary; consider inlining inner function
            "S101",
            "SLF001",  # Calling private method
            "W292",    # No blank line at end of file - included b/c cursor struggles to add a trailing newline and burns through requests trying to fix this linting error.
        ] }
        select = ["ALL"]
        unfixable = [
            "ERA001", # Commented out code
            "F401",   # unused-import
            "F841",   # unused-variable
        ]

        [tool.ruff.lint.mccabe]
            # Unlike Flake8, default to a complexity level of 10.
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 7

        [tool.ruff.lint.flake8-annotations]
            allow-star-arg-any = true

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false

[tool.ty.terminal]
    error-on-warning = true
